* fixed an issue where the headline of the currently selected program could overlap the legend of the mvpf chart on small screens.

--- a/web/styles.css
+++ b/web/styles.css
@@ -42,11 +42,9 @@ body {
  }
 
 #mvpfChartDiv {
-    padding: 20px;
     width: 97%;
-    height: 80vh;
-    max-height: 900px;
-    margin-bottom: 50px;
+    height: 75vh;
+    max-height: 850px;
 }
 
 #rightsidebarcharts {
